// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal component スナップショット 全オプション付きモーダルのスナップショットが一致する 1`] = `
<div
  class="fixed inset-0 z-50 flex items-center justify-center snapshot-overlay"
>
  <div
    aria-hidden="true"
    class="absolute inset-0 bg-black bg-opacity-50 transition-opacity"
  />
  <div
    aria-labelledby="snapshot-modal-title"
    class="
          relative bg-white rounded-2xl shadow-2xl max-h-[90vh] overflow-hidden
          max-w-4xl w-full mx-4
          snapshot-class
        "
    id="snapshot-modal"
    role="alertdialog"
  >
    <div
      class="flex items-center justify-between p-6 border-b border-gray-200"
    >
      <h2
        class="text-gray-900"
        data-level="2"
        data-size="xl"
        id="snapshot-modal-title"
      >
        Snapshot Modal
      </h2>
      <button
        aria-label="モーダルを閉じる"
        class="btn btn-ghost btn-sm ml-auto"
        type="button"
      >
        <span
          class=""
        >
          <span
            data-testid="close-icon"
          >
            ×
          </span>
        </span>
      </button>
    </div>
    <div
      class="max-h-[calc(90vh-8rem)] overflow-y-auto"
    >
      <div>
        Full options snapshot
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal component スナップショット 基本的なモーダルのスナップショットが一致する 1`] = `
<div
  class="fixed inset-0 z-50 flex items-center justify-center "
>
  <div
    aria-hidden="true"
    class="absolute inset-0 bg-black bg-opacity-50 transition-opacity"
  />
  <div
    class="
          relative bg-white rounded-2xl shadow-2xl max-h-[90vh] overflow-hidden
          max-w-2xl w-full mx-4
          
        "
    role="dialog"
  >
    <div
      class="flex items-center justify-between p-6 border-b border-gray-200"
    >
      <button
        aria-label="モーダルを閉じる"
        class="btn btn-ghost btn-sm ml-auto"
        type="button"
      >
        <span
          class=""
        >
          <span
            data-testid="close-icon"
          >
            ×
          </span>
        </span>
      </button>
    </div>
    <div
      class="max-h-[calc(90vh-8rem)] overflow-y-auto"
    >
      <div>
        Snapshot test content
      </div>
    </div>
  </div>
</div>
`;
